[package]
name = "dag-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
axum-macros = "0.5.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

